# small_string

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  test.yaml
src/: errors.rs  lib.rs  repr.rs  reserve_error.rs  traits.rs
src/errors/: from_utf16_error.rs  reserve_error.rs  to_lean_string_error.rs
src/features/: arbitrary.rs  serde.rs
src/repr/: heap_buffer.rs  inline_buffer.rs  last_byte.rs  num_to_repr.rs  static_buffer.rs
tests/: alloc_string.rs  handmade.rs  loom.rs  property.rs  quick.rs  serde.rs
