[package]
name = "lean_string"
description = "Compact, clone-on-write string."
version = "0.0.1"
edition = "2021"
authors = ["ryota2357"]
repository = "https://github.com/ryota2357/lean_string"
readme = "README.md"
license = "MIT"

[dependencies]

[dev-dependencies]
paste = "1.0.15"
proptest = { version = "1.5.0", features = ["attr-macro"] }

[features]
default = []
last_byte = []
